17-11-2019/Lab-6
//IF

>>> if a:
... 
  File "<stdin>", line 2
    
    ^
IndentationError: expected an indented block
>>> 
>>> if a:
...     print("printing the var name: ")
...     print(a)
... 
printing the var name: 
10
>>> 
>>> 

// IF ELSE

//2.7

>>> ui=int(input('Enter any integer no: '))
Enter any integer no: 12.20
>>> 
>>> if ui%2==0:
...     print("Even")
... else:
...     print("Odd")
... 
Even
>>> 

OR

$ cat test.py 
#!/usr/bin/python

ui=int(input("Enter any integer no: "))
if ui%2==0:
	print("Even")
else:
	print("Odd")

$ chmod +x test.py 
$ ./test.py 
Enter any integer no: 12
Even

// IF ELIF ELSE

$ cat if_elif_else.py 
#!/usr/bin/python

ui=int(input("Enter any integer no: "))
if ui==0:
	print("Neither even nor odd...")
elif ui%2==0:
	print("Even")
else:
	print("Odd")

$ chmod +x if_elif_else.py 
$ ./if_elif_else.py 
Enter any integer no: 0
Neither even nor odd...
$ ./if_elif_else.py 
Enter any integer no: 111
Odd

